change POST to GET on /explore endpoint
